--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "lint": "eslint src/**/*.{js,jsx}",
-    "lint:fix": "eslint src/**/*.{js,jsx} --fix"
+    "lint": "eslint src/**/*.{js, jsx, ts, tsx}",
+    "lint:fix": "eslint src/**/*.{js, jsx, ts, tsx} --fix"
   },
   "keywords": [],
   "author": "",
