--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
+    "react-router": "6",
+    "react-router-dom": "6",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2"
   }
